tests/enum_from/compile_fail/field/invalid_attribute_syntax.stderr
error: Expected SourceEnum::field_name
  --> tests/enum_from/compile_fail/field/invalid_attribute_syntax.rs:14:21
   |
14 |         #[enum_from(Source::Struct::x)] // Should be #[enum_from(Source::x)]
   |                     ^^^^^^^^^^^^^^^^^
